Finished confirm action, layout bug solved

--- a/projeto3-driveneats/style.css
+++ b/projeto3-driveneats/style.css
@@ -139,6 +139,71 @@ h1 {
     color: #333333;
 }
 
+.confirm h1 {
+    font-family: 'Roboto';
+    color: #FFFFFF;
+    margin-bottom: 21px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 26px;
+    text-align: center;
+}
+
+.item-description h2, .total {
+    margin-bottom: 13px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 26px;
+    letter-spacing: 0.018em;
+
+    color: #FFFFFF;
+}
+
+.total {
+    font-weight: 700;
+}
+
+.confirm button {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+    letter-spacing: 0.018em;
+    background-color: white;
+    color: #50D074;
+}
+
+#cancel {
+    background-color: #50D074;
+    color: #FFFFFF;
+}
+
+.item-description, .total {
+    display: flex !important;
+    justify-content: space-between;
+}
+
+.confirm {
+    display: none;
+    padding: 21px 26px 9px;
+    flex-direction: column;
+    position: fixed;
+    z-index: 10;
+    left: 50%;
+    top: 50%;
+    height:353px;
+    width: 377px;
+    margin-top: -176.5px;
+    margin-left: -188.5px;
+    background: #50D074;
+    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
+    border-radius: 9px;
+}
+
 .container {
     display: flex;
 }
